--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "scripts": {
     "old": "node bot.js",
     "start": "nodemon cbot.js"
-    
   },
   "author": "roshan",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.11.0",
+    "dotenv": "^17.2.3",
     "node-fetch": "^3.3.2",
     "node-telegram-bot-api": "^0.66.0"
   }
